wasm gc: minor optimizations; make initializer functions Wasm start function; fix compilation; remove debugging output